# camosam-backend

./: .gitignore  README.MD  pyproject.toml
camosam_backend/controllers/: gift_list_controller.py  guest_list_controller.py
camosam_backend/models/: gifts_model.py  guests_model.py  validation_models.py
camosam_backend/routes/: main.py
camosam_backend/services/: efi_pix_service.py  gift_list_service.py  guest_list_service.py
tests/: test_gifts_list.py
